Fix elements in main tag
Elements embedded in main tag was too close to each other.
Now there is space between them.

Beside, the README file is updated.

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,20 @@ main {
     gap: 20px;
 }
 
-/* find out why <main> doesn't work */
+.choice {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 20px;
+}
 
 footer {
     flex: 1 1 auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     font-size: 18px;
 
     background-color: black;
@@ -139,14 +146,15 @@ a {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+
     flex: 4 1 auto;
+
     gap: 20px;
     /* flex-wrap: wrap; */
     /* flex-wrap doesn't work  */
 
     max-width: 1600px;
     padding: 20px;
-    /* background-color: rgba(100, 0, 0, 0.5); */
 }
 
 .medallion {
